
version 0.79  Chris O'Brien  <siege@preoccupied.net>

	2004-06-23: The server-side buddy list is now imported on login.
	
	2004-06-21: Changes to work with evolving Meanwhile API. Gaim is
	in string-freeze for a 0.79 release targeted for the 24th.

	* mwgaim.c: prpl_info structure includes new icon spec field
	
	2004-06-16: Patches from nosnilmot to sync up with changes to
	Gaim CVS, and to add some options to the configure script

	* mwgaim.c: mw_list_status_text had a C99-ism that needed to
	be removed. mw_add_buddy, mw_add_buddies, mw_remove_buddy, and
	mw_remove_buddies added GaimGroup params

	* mwgaim.h: pretty unnecessary, so removed.
	
version 0.78  Chris O'Brien  <siege@preoccupied.net>
	
	2004-06-01: First import into sf.net CVS
	
	2004-05-17: Separated meanwhile-gaim from meanwhile
	libraries. Versioning of meanwhile-gaim will continue to match
	Gaim releases. First release using autoconf and automake.

version 0.77  Chris O'Brien  <siege@preoccupied.net>

	Tagged in CVS as v0_77

version 0.76  Chris O'Brien  <siege@preoccupied.net>

	Tagged in CVS as v0_76
